<resources>
    <string name="app_name">Don Deva</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="intent_image">intent_image</string>
    <string name="intent_product">intent_product</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="menu_home">Home</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_account">Account</string>
    <string name="menu_help">Help</string>
    <string name="menu_favourites">Favourites</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_preferred_start_time">select preferred start time</string>
    <string name="select_date">select date</string>
    <string name="user">User</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">Username :</string>
    <string name="email">Email :</string>
    <string name="email_verification">Email verification :</string>
    <string name="not_verified_tap_to_verify">Not verified(Tap to verify)</string>
    <string name="forgot_password_tap_to_reset">Forgot Password? Tap to reset</string>
    <string name="log_out">Log Out</string>
    <string name="image_of_product_requested">Image of Product requested</string>
    <string name="service_name">Service Name</string>
    <string name="service_date">service date</string>
    <string name="time">time</string>
    <string name="status">Status: </string>
    <string name="approve">Approve</string>
    <string name="help_fragment">Help fragment</string>
    <string name="help_insta">_don_deva</string>
    <string name="help_snap">bossqueengem</string>
    <string name="help_location">Kamploops, Bc</string>
    <string name="contact_us">2508792073</string>
    <string name="open_days">Monday-Saturday from 8am - 10pm</string>
    <string name="contact">Contact:</string>
    <string name="location">Location:</string>
    <string name="social_handles">Social Handles:</string>
    <string name="open_day">Open Days:</string>
    <string name="offer_image">Offer Image</string>
    <string name="image_selected">Image Selected</string>
    <string name="verified">Verified</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="name">Name:</string>
    <string name="add_offers">Add Offers</string>
    <string name="book">Book</string>
    <string name="select_image">Select Image</string>
    <string name="update">Update</string>
    <string name="help_email">dondeva2019@gmail.com</string>
    <string name="menu_calendar">Calendar</string>
</resources>