<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_favourite"
        android:title="@string/menu_favourites" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/ic_woman__4_"
        android:title="@string/menu_requests" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_baseline_calendar_today"
        android:title="@string/menu_calendar" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_account" />

</menu>