<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.derich.dondeva.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_requests"
        android:name="com.derich.dondeva.ui.requests.RequestsFragment"
        android:label="@string/menu_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.derich.dondeva.ui.favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.derich.dondeva.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_specific_service"
        android:name="com.derich.dondeva.ui.specificservice.SpecificServiceFragment"
        android:label="Specific Service"
        tools:layout="@layout/fragment_specific_service" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.derich.dondeva.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.derich.dondeva.ui.calendar.RequestsCalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_requests_calendar" />
</navigation>