<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.servicedetails.ServiceDetailsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="800dp"
            android:orientation="vertical"
            android:weightSum="100">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/specific_service_product_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:clickable="true"
                android:focusable="true" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/specific_service_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabMaxWidth="6dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="49">

                <LinearLayout
                    android:id="@+id/specificServiceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:text="@string/name"
                        android:textColor="#000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/edtServName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/name"
                        android:textSize="18sp" />
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabAddOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_baseline_playlist_add_24"
                    android:contentDescription="@string/add_offers"
                    android:focusable="true" />

                <Button
                    android:id="@+id/buttonBookService"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:text="@string/book"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/specificServiceName"
                    app:layout_constraintVertical_bias="0.0"
                    android:focusable="true" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>